# Master_Thesis

./: LICENSE  Makefile.am  README.md  capture.c  configure.in  論文.docx
how to write thesis/: 如何做研究與寫論文.doc  論文寫作2012.3.pptx  論文寫作的要領與過程 .ppt
prepare/: AHLS.xmind  論文流程圖.vsd
presentation/: AHLS 口試.pptx  Dynamic transcode of live streaming system based on HTTP Live Streaming Protocol_v2.pptx  Dynamic transcode of live streaming system.pptx
src/: Makefile.am  Makefile.in  avi2ts.c  cred.php  database.php  datasource.php  define.php  genm3u8.php  gettimeofday.php  getts.php  index.htm  m3u8updater.c  mediafresh.c  mp42jpeg.c  phpinfo.php  test.html  transcoding.c  v4lffmpeg.c  web_player.php
