#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE("DynamicStreamServer", "0.01")

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([avformat],[av_register_all],,AC_MSG_ERROR([You need libavformat (av_register_all) to build $PACKAGE]))
AC_CHECK_LIB([avdevice],[avdevice_register_all],,AC_MSG_ERROR([You need libavdevice (avdevice_register_all) to build $PACKAGE]))

# Checks for header files.
AC_CHECK_HEADERS([inttypes.h stdint.h stdlib.h string.h])
AC_CHECK_HEADERS([libavformat/avformat.h],
				[],
				[AC_MSG_ERROR([libavformat headers not found or not usable])])
AC_CHECK_HEADERS([libavdevice/avdevice.h],
				[],
				[AC_MSG_ERROR([libdevice headers not found or not usable])])


# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_INT16_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_CHECK_FUNCS([memset])

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
